Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-16768

QtC locator window doesn't have content spread across the width

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • Qt Creator 4.2.0-beta1
    • Qt Creator 4.2.0-beta1
    • Editors
    • None

    Description

      QtC git master has changed the size of the locator windows from 1/3 to 2/3 of QtC's window width.

      Unfortunately the content is still squeezed on the left, while the right part has wasted space.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            orgads Orgad Shaneh
            cadam Cristian Adam
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes