Locator: Give the left column more space

Make it 1/2 of the total width.

Task-number: QTCREATORBUG-16768
Change-Id: I6c87b6c9aa4dd39d598c4890a30cda7d6f386d99
Reviewed-by: Cristian Adam <cristian.adam@gmail.com>
Reviewed-by: Tobias Hunger <tobias.hunger@qt.io>